--- a/entalk_app_final/package.json
+++ b/entalk_app_final/package.json
@@ -1,11 +1,12 @@
 {
   "name": "entalk-question-system",
   "version": "1.0.0",
-  "description": "Entalk Question System for English conversation practice",
+  "description": "EnTalk Question System for generating engaging conversation questions",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "node test.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -13,6 +14,13 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.3",
     "openai": "^3.2.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
