--- a/entalk_app_final/package.json
+++ b/entalk_app_final/package.json
@@ -1,12 +1,11 @@
 {
   "name": "entalk-question-system",
   "version": "1.0.0",
-  "description": "EnTalk Question System for generating engaging conversation questions",
+  "description": "Entalk Question System for English conversation practice",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -15,12 +14,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
-    "openai": "^3.2.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
-  },
-  "engines": {
-    "node": ">=14.0.0"
+    "openai": "^3.2.1",
+    "uuid": "^9.0.0"
   }
 }
